--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -6,12 +6,18 @@
             <section class="conteudo">
                 <section class="imagem">
                     <div class="imagem__conteudo">
-                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}">
+                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/foto1leia.jpeg' %}">
                         <div class="imagem__info">
                             <div class="imagem__texto">
-                                <p class="imagem__titulo">“Penhascos Cósmicos” na Nebulosa Carina</p>
-                                <p class="imagem__descricao">12 de julho de 2022</p>
-                                <p class="imagem__texto">O que se parece muito com montanhas escarpadas em uma noite enluarada é na verdade a borda de uma região jovem e próxima de formação de estrelas NGC 3324 na Nebulosa Carina. Capturada em luz infravermelha pela Near-Infrared Camera ( NIRCam ) no Telescópio Espacial James Webb da NASA, esta imagem revela áreas anteriormente obscurecidas do nascimento de estrelas.</p>
+                                <p class="imagem__titulo">Leia na cama</p>
+                                <p class="imagem__descricao">02 de outubro de 2022</p>
+                                <p class="imagem__texto">Uma das primeiras fotos que capturei de Leia foi logo após trocar de telefone para um iPhone XR. Nessa imagem, ela dormia tranquilamente, porém, ao me perceber aproximando com o telefone para registrar o momento, seus olhos se abriram e ela direcionou um olhar curioso em direção à câmera.
+
+
+
+
+
+                                </p>
                             </div>
                         </div>
                     </div>
