--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -10,7 +10,7 @@
                         <div class="imagem__info">
                             <div class="imagem__texto">
                                 <p class="imagem__titulo">Leia na cama</p>
-                                <p class="imagem__descricao">02 de outubro de 2022</p>
+                                <p class="imagem__descricao">02 de outubro de 2022, Recife - PE</p>
                                 <p class="imagem__texto">Uma das primeiras fotos que capturei de Leia foi logo após trocar de telefone para um iPhone XR. Nessa imagem, ela dormia tranquilamente, porém, ao me perceber aproximando com o telefone para registrar o momento, seus olhos se abriram e ela direcionou um olhar curioso em direção à câmera.
 
 
